<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConvertionApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="_0_millimetre">0 millimetre</string>
    <string name="_0_kilometre">0 kilometre</string>
    <string name="_0_mile">0 mile</string>
    <string name="_0_cm">0 cm</string>
    <string name="_0_metre">0 metre</string>
    <string name="_0_inch">0 inch</string>
    <string name="convert">Convert</string>
    <string name="unitPrompt">Choose a unit</string>
    
    <string-array name="unitArray">
        <item>Inch</item>
        <item>Centimetre</item>
        <item>Metre</item>
        <item>Mile</item>
        <item>Kilometre</item>
        <item>Millimetre</item>
    </string-array>
    
 </resources>
